--- a/assets/code/style.css
+++ b/assets/code/style.css
@@ -23,7 +23,7 @@ nav {
     width: 100%;
     background-color: rgba(231, 231, 231, 0.555);
     height: 0px;
-    opacity: 0;
+    display: none;
     transition: height .2s, opacity .2s;
 }
 
@@ -38,4 +38,9 @@ nav {
 }
 .main {
     margin-top: 100px;
+}
+.text {
+    display: flex;
+    flex-direction: column;
+    text-align: center;
 }
