add products section & optimized

--- a/assets/code/mobile.css
+++ b/assets/code/mobile.css
@@ -1,4 +1,4 @@
-@media screen and (min-width:460px) and (max-width:991px)  {
+@media screen and (min-width:650px) and (max-width:991px)  {
     .burger-menu {
         display: inline !important;
     }
@@ -15,5 +15,19 @@
     #about {
         display: flex;
         flex-direction: column;
+    }
+    #products div:nth-child(1) {
+        width: 800px;
+        display: flex;
+        flex-direction: column;
+        flex-wrap: wrap;
+    }
+}
+
+@media screen and (min-width:450px) and (max-width:649px) {
+    #products div:nth-child(3) {
+        width: 200px;
+        display: flex;
+        flex-wrap: wrap;
     }
 }
