--- a/assets/code/style.css
+++ b/assets/code/style.css
@@ -53,3 +53,12 @@ nav {
 .w-50{
     width: 50vw;
 }
+footer {
+    height: fit-content;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+#contact {
+    margin-bottom: 100px;
+}
